--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,3 @@
-# This file lists all individuals that contributed to the contents in the repository.
-
-<aramyedeey199@yahoo.com> OMOTOLANI damilola
-OGONNA Amiola
+Omotalani Damilola <aramyedeey199@yahoo.com>
+Kelechi Amiola <kelechichukwuma930@gmail.com>
+# This file list all individuals having contributed content in this repository.
